--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -2,3 +2,7 @@ PORT = 4000
 NODE_ENV = DEVELOPMENT
 
 DB_LOCAL_URL = mongodb://localhost:27017/shopit
+
+JWT_SECRET = SDFJDSHFJSDFH748375834HJ
+JWT_EXPIRES_TIME = 7d
+COOKIE_EXPIRES_TIME = 7
