--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,6 +1,6 @@
 PORT = 4000
-#NODE_ENV = DEVELOPMENT
-NODE_ENV = PRODUCTION
+NODE_ENV = DEVELOPMENT
+#NODE_ENV = PRODUCTION
 
 DB_LOCAL_URL = mongodb://localhost:27017/shopit
 
